# genai-demo

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: hello.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: pages.yml
deployement/mlflow/: Dockerfile  README.md
docs/: Gemfile  Makefile  README.md  _config.yml  index.md
docs/_layouts/: default.html
docs/documentation/: index.md
docs/documentation/claude-code/: howto.md  overview.md
docs/documentation/devcontainer/: getting-started.md  tips.md
docs/presentations/: custom.css  index.md
docs/presentations/agentic-coding/: index.html  slides.md
docs/presentations/agentic-coding/images/: timeline.drawio
docs/presentations/claude-code/: index.html  slides.md
docs/presentations/devcontainer/: index.html  slides.md
notebooks/: hello-claude-agent-sdk.ipynb  mlflow-strands-tracing.ipynb  rich-diff.ipynb  test-version.ipynb
src/genai_demo/: __init__.py  rich_diff.py  rich_diff_old.py
