[project]
name = "genai-demo"
version = "0.1.0"
description = "Sandbox with GenAI examples"
readme = "README.md"
authors = [
    { name = "Jiri Klic", email = "web@jiriklic.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.8",
]

[project.scripts]
genai-demo = "genai_demo:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
]
